# Preemptive_Surveillance_PHC_OTC

./: README.md  mkdocs.yml  pyproject.toml
Data/: RELATORIO_DTB_BRASIL_MUNICIPIO.csv  counts_aih_2025.parquet  counts_aih_gripal.parquet  estimativa_dou_2024.xls
Results/: dado_fig3.csv  dado_fig3_bi.csv  dado_fig3_para_suplementar.csv  dado_sup_fig1.csv  dado_sup_fig2.csv  data_fig1.csv  data_manuscript_model_results_predict_aih_with_aps_imed.parquet  data_manuscript_predict_aih_with_aps_imed.parquet  data_manuscript_warning_aih_imed.parquet  data_manuscript_warning_aih_imed2.parquet  data_manuscript_warning_aih_imed2_def2.parquet  data_manuscript_warning_aih_imed_for_regre.parquet  data_manuscript_warning_aih_muni.parquet  data_manuscript_warning_aih_muni2.parquet  data_manuscript_warning_otc_only_imed.parquet  data_manuscript_warning_otc_with_aps_imed.parquet  data_manuscript_warning_phc_only_imed.parquet  data_manuscript_warning_phc_with_otc_imed.parquet  timing_aps_aih.parquet  timing_aps_aih_def2.parquet  timing_otc_aih.parquet  timing_otc_aih_def2.parquet
Scripts/: ANOMALY_AIH_final.ipynb  Bivariate analysis to predict AIH.ipynb  Bivariate anomaly detection results.ipynb  Class_AIH_save_data_for_regressions.ipynb  Class_series_save_data_for_regressions.ipynb  Data overview and descriptive analysis - Part1.ipynb  Data overview and descriptive analysis - Part2.ipynb  Data overview and descriptive analysis - Part3.ipynb  Data overview and descriptive analysis - Part4.ipynb  Descriptive_APS_predict_AIH.ipynb  EWS_series_otc_alone_imed.ipynb  anomaly_aih_def2.ipynb  (+19 more)
(+4 files in other folders)
